--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 networks:
   app-network:
     driver: bridge
@@ -51,6 +49,17 @@ services:
       - app-network
     volumes:
       - prometheus_data:/prometheus
+    restart: always
+  
+  kafka:
+    build:
+      context: kafka
+      dockerfile: Dockerfile
+    image: go-social/kafka
+    ports:
+      - "9092:9092"
+    networks:
+      - app-network
     restart: always
   
   backend:
