feat: update redis, kafka

--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -427,7 +427,7 @@ locale-collate ""
 # Snapshotting can be completely disabled with a single empty string argument
 # as in following example:
 #
-# save ""
+save ""
 #
 # Unless specified otherwise, by default Redis will save the DB:
 #   * After 3600 seconds (an hour) if at least 1 change was performed
@@ -1124,7 +1124,7 @@ aclfile /etc/redis/users.acl
 # limit for maxmemory so that there is some free RAM on the system for replica
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
-# maxmemory <bytes>
+maxmemory 100mb
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select one from the following behaviors:
@@ -1153,7 +1153,7 @@ aclfile /etc/redis/users.acl
 #
 # The default is:
 #
-# maxmemory-policy noeviction
+maxmemory-policy allkeys-lfu
 
 # LRU, LFU and minimal TTL algorithms are not precise algorithms but approximated
 # algorithms (in order to save memory), so you can tune it for speed or
@@ -2236,7 +2236,7 @@ rdb-save-incremental-fsync yes
 # a good idea to leave the defaults untouched.
 
 # Active defragmentation is disabled by default
-# activedefrag no
+activedefrag yes
 
 # Minimum amount of fragmentation waste to start active defrag
 # active-defrag-ignore-bytes 100mb
